Changes in version 7.9, 02/05/2022
==================================

* intrinsics.hpp: Improved x64 BSF assembly.
* iterator.cpp: Reduce memory allocations in generate_prev_primes().
* iterator-c.cpp: Reduce memory allocations.
* Erat.cpp: Reduce memory usage when sieving a single segment.
* EratBig.cpp: Improve instruction level parallelism.
* EratBig.cpp: Improve next wheel index code.
* EratBig.cpp: Use std::copy() instead of std::rotate().
* SievingPrimes.cpp: Reduce branch mispredictions.
* PreSieve.cpp: Hardcode buffersDist.
* MemoryPool.cpp: Reduce memory usage.
* StorePrimes.hpp: Improve nth prime approximation.
* config.hpp: Tune FACTOR_ERATSMALL constant.
* Use a single MemoryPool per thread (previously 2).
* Increase max sieve array size to 8 KiB.

Changes in version 7.8, 21/01/2022
==================================

primesieve can now pre-sieve the multiples of small primes < 100
(previously <= 19) using about only half as much memory. Instead
of using a single large pre-sieved buffer primesieve now uses
8 smaller pre-sieved buffers which are bitwise AND together before
being copied into the sieve array. The new pre-sieveing algorithm
provides a speedup of up to 10% when generating the primes < 10^11.
Thanks to @zielaj for this amazing work!

* PreSieve.cpp: Add multiple pre-sieve buffers #110.
* PrimeGenerator.cpp: Reduce branch mispredictions #109.
* PrimeGenerator.cpp: Add AVX512 algorithm #109.
* iterator.cpp: Avoid default initialization of primes vector.
* iterator-c.cpp: Avoid default initialization of primes vector.
* ParallelSieve.cpp: Initialize PreSieve.
* ALGORITHMS.md: Update documentation.

Changes in version 7.7, 13/11/2021
==================================

The CPU cache size detection has been improved. The code now better
handles uncertain situations when CPU cache information is only
partially available. If the CPU cache detection fails entirely, then
the new code uses a larger sieve size (than before) that will most